# ormcamp-gamgulmarket

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  model_from_db.py  pyproject.toml
app/: main.py
app/config/: settings.py
app/db/: async_session.py
app/dependencies/authentication/: __init__.py  jwt.py  session.py
app/dependencies/chat/: __init__.py  rooms.py
app/dependencies/core/: redis.py
app/dependencies/permissions/: __init__.py  authenticated.py
app/dependencies/products/: __init__.py  products.py
app/dependencies/users/: __init__.py  login.py  profiles.py  redis.py  registers.py  resignation.py
app/models/: products.py  users.py
app/orms/: products.py  users.py
app/routes/: routers.py
app/routes/endpoints/: chat.py  products.py  users.py
app/schemas/: __init__.py  params.py
app/schemas/chat/: rooms.py
app/schemas/products/: __init__.py  products.py
app/schemas/users/: login.py  profiles.py  registers.py  resignation.py
app/services/chat/: connections.py  messages.py
app/services/core/: images.py  permissions.py
app/services/users/: jwt.py  password.py  session.py
migrations/: README
migrations/versions/: 1fc77a948b3b_add_profiles_table.py  34ec93dccf1a_add_users_model.py  4c1bdb2e7c96_add_product_table.py  5ce89968916e_enable_pg_trgm_extension.py  61debac3fb49_add_resignation_reason_to_users.py  af5fae973efb_change_image_field_to_jsonb.py  baf779dc76cb_change_images_field_to_jsonb.py
scripts/: create_test_db.sh
tests/: conftest.py  test_dependencies_users.py
